# PyQtLearn

./: .gitignore  README.md  pyproject.toml
src/: build_ui.py
src/01-hello-world/: __main__.py
src/02-QC-project/: 02-QC-Project.pyproject  __main__.py  form.ui
src/03-ncmdecoder/: 03-ncmdecoder.pyproject  __main__.py  decrypt.py
